# r2se-core

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
notebooks/: demo.ipynb
