[project]
name = "r2se-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markdown-it-py>=3.0.0",
    "mdit-plain>=1.0.1",
    "milvus-haystack>=0.0.10",
    "pymilvus>=2.4.6",
    "pypdf>=4.3.1",
    "sentence-transformers>=3.1.0",
]
